# leapXELA_model

./: config.json  pyproject.toml  robot.xml
assets/: clipper.part  clipper.stl  fingertop_unfied.part  fingertop_unfied.stl  leap_hand_xela_back_cover.part  leap_hand_xela_back_cover.stl  leap_hand_xela_bottom.part  leap_hand_xela_bottom.stl  leap_hand_xela_motorholder.part  leap_hand_xela_motorholder.stl  leap_hand_xela_side_cover.part  leap_hand_xela_side_cover.stl  outer_skin_v1_3_1.part  outer_skin_v1_3_1.stl  p2_unified.part  p2_unified.stl  p3_unified.part  p3_unified.stl  p4_unified.part  p4_unified.stl  p5_unified.part  p5_unified.stl  palm_face.part  palm_face.stl  thconnector.part  thconnector.stl  thfingertip_unified.part  thfingertip_unified.stl  thp0_unified.part  thp0_unified.stl  thp1_unified.part  thp1_unified.stl  thp2_unified.part  thp2_unified.stl  top_palm.part  top_palm.stl  uspa46.part  uspa46.stl
